Fix bugs. Split custom.php to customize-css.php. Fixed images having padding that misaligns them. Fixed revision logs showing twice with lead reply. Fixed forums active nav link not customizing because it lacks "active" class. Split custom.php so the Customizer css has its own customize-css.php file.

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -881,14 +881,15 @@ div.bbp-template-notice.error {
       }
 
    // reply Revision log
-   .bbp-reply-revision-log .avatar {
+   .bbp-reply-revision-log .avatar,
+   .bbp-topic-revision-log .avatar {
       display: none;
    }
 
    // Images
    #bbpress-forums .bbp-body .bbp-topic-content img,
    #bbpress-forums .bbp-body .bbp-reply-content img {
-      margin: .5em 1em;
+      /*margin: .5em 1em;*/
    }
 
    // Trashed replies
